--- a/s01e01_personnes.html
+++ b/s01e01_personnes.html
@@ -9,6 +9,9 @@
 
     <h1>Exercice 01. Un graphique avec Google Sheet</h1>
     <iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vT4Xx3efSYYBEY5kQbmqdbH9ZDIGrIThpwMN1Fw_rIPsIf53BwnfcOdkCd7_Qz7VHw6NKBQNFzWaM9e/pubchart?oid=414683385&amp;format=interactive"></iframe>
-    
+    <p>Un graphique généré avec Rawgraphs.io</p>
+    <p>
+        <img src="01_viz.jpg" width="500">
+    </p>
 </body>
 </html>
