--- a/s04e01-photos_3d.html
+++ b/s04e01-photos_3d.html
@@ -14,7 +14,7 @@
   <button id="resetButton" style="display: block; margin: 20px auto; padding: 10px 20px; font-size: 16px;">Reset View</button>
   <script>
     let points = [
-      { lat: 48.908886, lon: 2.364886, alt: 41.44, dir: 280.8744813, img: 'IMG_9655.jpg' },
+      { lat: 48.908886, lon: 2.364886, alt: 41.44, dir: 280.8744813, img: 'https://raw.githubusercontent.com/ereyes/vis_acehn_24/refs/heads/main/IMG_9655.jpg' },
       // Existing points...
     ];
     let images = [];
