--- a/s03-e02-photos-carte-tableau.html
+++ b/s03-e02-photos-carte-tableau.html
@@ -1,6 +1,6 @@
 <!-- 
-Deux boutons : Prendre une photo (caméra) + Sélectionner des fichiers (local)
-+ EXIF + Carte + Export CSV
+Sélecteur de fichiers uniquement + vignettes uniformes avec nom de fichier
+EXIF + Carte + Export CSV
 Cours Datavis — M2 ACEHN, Univ. Paris 8
 -->
 
@@ -9,7 +9,7 @@ Cours Datavis — M2 ACEHN, Univ. Paris 8
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-  <title>Photos + EXIF + Carte (mobile, 2 boutons)</title>
+  <title>Photos + EXIF + Carte (sélecteur fichiers)</title>
 
   <style>
     :root{
@@ -18,12 +18,12 @@ Cours Datavis — M2 ACEHN, Univ. Paris 8
     }
     *{ box-sizing:border-box; }
     body{
-      margin:0;
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      margin:0; font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
       color:var(--text); background:var(--bg); line-height:1.5;
     }
     .container{ max-width:1200px; margin:0 auto; padding:16px; }
 
+    /* Contrôles */
     .controls{ display:flex; gap:12px; flex-wrap:wrap; align-items:center; margin-bottom:12px; }
     .btn{
       appearance:none; border:1px solid var(--border); background:var(--surface);
@@ -32,6 +32,7 @@ Cours Datavis — M2 ACEHN, Univ. Paris 8
     .btn.primary{ background:var(--primary); color:#fff; border-color:transparent; }
     .btn:disabled{ opacity:.55; cursor:not-allowed; }
 
+    /* Zone supérieure */
     .top-section{ display:flex; gap:12px; align-items:stretch; }
     .drop-zone{
       flex:1 1 0; min-height:260px; border:2px dashed var(--border);
@@ -41,28 +42,55 @@ Cours Datavis — M2 ACEHN, Univ. Paris 8
     .drop-zone.dragover{ border-color:var(--primary); background:#eff6ff; color:#1e3a8a; }
     #map{ flex:1 1 0; min-height:260px; border-radius:12px; overflow:hidden; }
 
+    /* Table EXIF */
     .table-wrap{ margin-top:16px; width:100%; overflow-x:auto; }
     .exif-table{ width:100%; border-collapse:collapse; min-width:720px; }
     .exif-table th, .exif-table td{ border:1px solid #eee; padding:8px 10px; text-align:left; }
     .exif-table th{ background:#f3f4f6; }
 
-    .image-gallery{ margin-top:16px; display:flex; flex-wrap:wrap; gap:12px; }
-    .image-item img{
-      max-width:320px; height:auto; display:block; border-radius:8px; border:1px solid #eee;
+    /* Galerie : grille + vignettes uniformes 4:3 */
+    .image-gallery{
+      margin-top:16px;
+      display:grid;
+      grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+      gap:12px;
+      align-items:start;
+    }
+    .image-item{
+      display:flex; flex-direction:column;
+    }
+    .thumb{
+      width:100%;
+      aspect-ratio: 4 / 3;             /* vignettes uniformes */
+      border:1px solid #eee;
+      border-radius:8px;
+      overflow:hidden;
+      background:#f1f5f9;
+    }
+    .thumb img{
+      width:100%; height:100%;
+      object-fit:cover;                /* rogne proprement pour remplir 4:3 */
+      display:block;
+    }
+    .image-item figcaption{
+      margin-top:6px; font-size:0.9rem; color:var(--muted);
+      white-space:nowrap; overflow:hidden; text-overflow:ellipsis;
     }
 
+    /* Mobile */
     @media (max-width: 900px){
       .top-section{ flex-direction:column; }
       .drop-zone, #map{ width:100%; min-height:40vh; }
-      .image-item img{ max-width:100%; }
     }
 
+    /* Mode sombre */
     @media (prefers-color-scheme: dark){
       :root{ --bg:#0b0f14; --text:#e5e7eb; --muted:#94a3b8; --surface:#0f172a; --border:#334155; --primary:#3b82f6; }
       .exif-table th{ background:#0f172a; }
       .exif-table td, .exif-table th{ border-color:#1f2937; }
       .drop-zone{ background:#0f172a; }
       .btn{ background:#111827; color:#e5e7eb; border-color:#374151; }
+      .thumb{ border-color:#1f2937; background:#111827; }
     }
   </style>
 
@@ -76,29 +104,15 @@ Cours Datavis — M2 ACEHN, Univ. Paris 8
   <div class="container">
     <!-- Contrôles -->
     <div class="controls">
-      <!-- Bouton 1 : sélectionner depuis l’appareil (pas de capture) -->
-      <label for="file-input-picker" class="btn primary" title="Sélectionner des fichiers locaux">Sélectionner des fichiers</label>
+      <label for="file-input" class="btn primary" title="Sélectionner des fichiers locaux">Sélectionner des fichiers</label>
       <input
-        id="file-input-picker"
+        id="file-input"
         type="file"
         accept="image/*"
         multiple
         style="display:none"
         aria-label="Sélectionner des images depuis le stockage local"
       />
-
-      <!-- Bouton 2 : ouvrir la caméra (n'affiche pas les EXIF) 
-        <label for="file-input-camera" class="btn" title="Prendre une photo">Prendre une photo</label> 
-        <input
-          id="file-input-camera"
-          type="file"
-          accept="image/*"
-          capture="environment" 
-          style="display:none"
-          aria-label="Prendre une photo avec la caméra"
-        />
-      -->
-
       <button id="download-csv" class="btn" disabled>Télécharger CSV</button>
     </div>
 
@@ -106,7 +120,7 @@ Cours Datavis — M2 ACEHN, Univ. Paris 8
     <div class="top-section">
       <div class="drop-zone" id="drop-zone" role="button" tabindex="0"
            aria-label="Déposez des photos ici ou touchez pour sélectionner depuis l’appareil">
-        Déposez vos photos ici<br>(ou touchez pour sélectionner depuis l’appareil)
+        Déposez vos photos ici<br>(ou touchez pour sélectionner des fichiers)
       </div>
       <div id="map" aria-label="Carte des positions GPS"></div>
     </div>
@@ -140,8 +154,7 @@ Cours Datavis — M2 ACEHN, Univ. Paris 8
   <script>
     // Références DOM
     const dropZone = document.getElementById('drop-zone');
-    const pickerInput = document.getElementById('file-input-picker');
-    const cameraInput = document.getElementById('file-input-camera');
+    const fileInput = document.getElementById('file-input');
     const downloadBtn = document.getElementById('download-csv');
     const exifDataBody = document.getElementById('exif-data-body');
     const imageContainer = document.getElementById('image-container');
@@ -158,7 +171,7 @@ Cours Datavis — M2 ACEHN, Univ. Paris 8
     const dataSet = [];
     let rowCounter = 0;
 
-    // --- Dropzone & interactions
+    // Dropzone & interactions
     dropZone.addEventListener('dragover', (e) => {
       e.preventDefault();
       dropZone.classList.add('dragover');
@@ -169,18 +182,16 @@ Cours Datavis — M2 ACEHN, Univ. Paris 8
       dropZone.classList.remove('dragover');
       if (e.dataTransfer && e.dataTransfer.files) handleFiles(e.dataTransfer.files);
     });
-
-    // IMPORTANT : clic/entrée/espace sur la zone -> ouvre le sélecteur de fichiers (pas la caméra)
-    dropZone.addEventListener('click', () => pickerInput.click());
+    // Clic/Entrée/Espace -> ouvre le sélecteur de fichiers (pas de caméra)
+    dropZone.addEventListener('click', () => fileInput.click());
     dropZone.addEventListener('keydown', (e) => {
-      if (e.key === 'Enter' || e.key === ' ') pickerInput.click();
+      if (e.key === 'Enter' || e.key === ' ') fileInput.click();
     });
 
-    // Sélecteur de fichiers locaux
-    pickerInput.addEventListener('change', () => handleFiles(pickerInput.files));
-    // Caméra (1 photo à la fois ; ré-appuyer pour une autre)
-    cameraInput.addEventListener('change', () => handleFiles(cameraInput.files));
+    // Sélection de fichiers
+    fileInput.addEventListener('change', () => handleFiles(fileInput.files));
 
+    // Export CSV
     downloadBtn.addEventListener('click', exportCSV);
 
     // --- Traitement des fichiers
@@ -198,21 +209,32 @@ Cours Datavis — M2 ACEHN, Univ. Paris 8
             const width = img.naturalWidth;
             const height = img.naturalHeight;
 
-            // ID unique pour lier cellules -> éviter collisions
+            // ID unique pour lier cellules
             const idSuffix = (++rowCounter) + '-' + Math.random().toString(36).slice(2,7);
             const safeId = sanitizeFilename(file.name) + '-' + idSuffix;
 
-            // Aperçu
-            const imageItem = document.createElement('div');
-            imageItem.className = 'image-item';
+            // ----- Vignette + nom de fichier
+            const figure = document.createElement('figure');
+            figure.className = 'image-item';
+
+            const thumb = document.createElement('div');
+            thumb.className = 'thumb';
+
             const imgEl = document.createElement('img');
             imgEl.src = dataURL;
             imgEl.alt = file.name;
             imgEl.loading = 'lazy';
-            imageItem.appendChild(imgEl);
-            imageContainer.appendChild(imageItem);
+            thumb.appendChild(imgEl);
 
-            // Ligne du tableau (placeholder)
+            const caption = document.createElement('figcaption');
+            caption.textContent = file.name;     // évite le HTML injection
+            caption.title = file.name;           // survol : nom complet
+
+            figure.appendChild(thumb);
+            figure.appendChild(caption);
+            imageContainer.appendChild(figure);
+
+            // ----- Ligne du tableau (remplie progressivement)
             const tr = document.createElement('tr');
             tr.innerHTML = `
               <td>${escapeHTML(file.name)}</td>
@@ -229,7 +251,7 @@ Cours Datavis — M2 ACEHN, Univ. Paris 8
             `;
             exifDataBody.appendChild(tr);
 
-            // Lire EXIF
+            // ----- Lecture EXIF
             EXIF.getData(file, function() {
               // GPS
               let lat = dmsToDecimal(EXIF.getTag(this, 'GPSLatitude'));
@@ -249,7 +271,7 @@ Cours Datavis — M2 ACEHN, Univ. Paris 8
               let date = '', time = '';
               if (dtOriginal) [date, time] = splitDateTime(dtOriginal);
 
-              // Appliquer signes N/S/E/W et altitude ref
+              // Appliquer signes N/S/E/W + altitude ref
               if (typeof lat === 'number' && !isNaN(lat) && latRef && String(latRef).toUpperCase() === 'S') lat = -lat;
               if (typeof lon === 'number' && !isNaN(lon) && lonRef && String(lonRef).toUpperCase() === 'W') lon = -lon;
               if (typeof alt === 'number' && !isNaN(alt) && (altRef === 1 || String(altRef) === '1')) alt = -alt;
@@ -278,7 +300,7 @@ Cours Datavis — M2 ACEHN, Univ. Paris 8
                 }
               }
 
-              // Pour l'export CSV
+              // Export CSV
               dataSet.push({
                 'Filename': file.name,
                 'Width': width,
@@ -314,7 +336,7 @@ Cours Datavis — M2 ACEHN, Univ. Paris 8
         { '&':'&amp;', '<':'&lt;', '>':'&gt;', '"':'&quot;', "'":'&#39;' }[s]
       ));
     }
-    // Convertit un rationnel EXIF en nombre JS
+    // Convertit un rationnel EXIF en nombre
     function toNumber(r){
       if (r == null) return null;
       if (typeof r === 'number') return r;
@@ -350,7 +372,7 @@ Cours Datavis — M2 ACEHN, Univ. Paris 8
         'GPS Image Direction','Camera Make','Camera Model','Date Taken','Time Taken'
       ];
       const lines = [];
-      lines.push('sep=,');              // aide Excel à choisir la virgule
+      lines.push('sep=,');
       lines.push(headers.join(','));
 
       dataSet.forEach(row => {
