Comment out CSV separator line in HTML file
Commented out the line that adds the separator for CSV export.

--- a/s03-e02-photos-carte-tableau.html
+++ b/s03-e02-photos-carte-tableau.html
@@ -372,7 +372,7 @@ Cours Datavis — M2 ACEHN, Univ. Paris 8
         'GPS Image Direction','Camera Make','Camera Model','Date Taken','Time Taken'
       ];
       const lines = [];
-      lines.push('sep=,');
+      //lines.push('sep=,');
       lines.push(headers.join(','));
 
       dataSet.forEach(row => {
