--- a/s04e04-photos-carte-interactive.html
+++ b/s04e04-photos-carte-interactive.html
@@ -77,14 +77,55 @@
   .style-btn.active{background:var(--accent);color:#fff;}
 
   /* Right sidebar (¼ page) */
+#sidebar{
+  position:fixed;top:0;right:0;height:100vh;z-index:2;
+  width: min(30vw, 520px);  /* ~30% of screen, max 520px */
+  display:flex;flex-direction:column;gap:12px;
+  background:var(--glass);backdrop-filter:blur(12px) saturate(120%);
+  border-left:1px solid rgba(0,0,0,.08); box-shadow:-8px 0 30px rgba(0,0,0,.18);
+  padding:14px; transform:translateX(0); transition:transform var(--t),opacity var(--t);
+}
+
+@media (max-width: 768px) {
+
+  /* Sidebar is narrow: let it scroll and shrink padding a bit */
   #sidebar{
-    position:fixed;top:0;right:0;height:100vh;z-index:2;
-    width:clamp(280px,25vw,520px);
-    display:flex;flex-direction:column;gap:12px;
-    background:var(--glass);backdrop-filter:blur(12px) saturate(120%);
-    border-left:1px solid rgba(0,0,0,.08); box-shadow:-8px 0 30px rgba(0,0,0,.18);
-    padding:14px; transform:translateX(0); transition:transform var(--t),opacity var(--t);
+    width: 30vw;           /* ~30% as you wanted */
+    padding: 8px;
+    overflow-y: auto;      /* scroll inside the panel if needed */
   }
+
+  /* Keep a decent area for the image */
+  .photo-wrap{
+    min-height: 40vh;      /* at least ~40% of viewport height */
+  }
+
+  /* Caption/meta block: smaller text + scroll if it gets too tall */
+  .caption{
+    max-height: 30vh;      /* use up to ~30% of viewport height */
+    overflow-y: auto;
+    padding: 8px 9px;
+    font-size: 13px;
+  }
+  .caption .title{
+    font-size: 14px;
+  }
+  .caption .meta{
+    font-size: 11px;
+  }
+
+  /* “Add photos” area: make it more compact */
+  .sidebar-drop{
+    padding: 6px;
+    font-size: 12px;
+  }
+  .sidebar-dropzone{
+    font-size: 12px;
+    padding: 6px;
+  }
+}
+
+
   #sidebar.hidden{opacity:0;transform:translateX(12px);}
   .photo-wrap{
     position:relative;flex:1 1 auto;min-height:0;
